changes in articles.html and index.html

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <p>On <a id="substackLink" target="_blank" rel="noopener">Substack</a> you’ll find my latest market notes; on <a id="xLink2" target="_blank" rel="noopener">X</a> I share quick takes and charts.</p>
         </div>
         <div class="about-media">
-          <img src="assets/img/me.png" alt="Photo of the author" />
+          <img src="assets/img/me.png" alt="Photo of the author" width="522" height="1310" loading="lazy" decoding="async" />
         </div>
       </div>
     </section>
